# Cube-Solver

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  desktop.yml  release.yml
crates/cube_core/: Cargo.toml
crates/cube_core/examples/: turn_scaling.rs
crates/cube_core/src/: lib.rs
crates/cube_core/tests/: cube_core_behavior.rs
crates/cube_solver/: Cargo.toml
crates/cube_solver/src/: lib.rs
crates/cube_solver/src/kociemba/: coords.rs  cube3.rs  mod.rs  movetables.rs  search.rs
crates/cube_solver/src/reduction/: centers.rs  centers_det.rs  edges.rs  edges_det.rs  finish.rs  mod.rs
crates/cube_solver/tests/: solver_behavior.rs
crates/cube_wasm/: Cargo.toml
crates/cube_wasm/src/: lib.rs
crates/solver_lab_app/: Cargo.toml
crates/solver_lab_app/src/: grid.rs  main.rs  scene.rs
crates/solver_store/: Cargo.toml
crates/solver_store/src/: lib.rs
crates/solver_store/tests/: store_behavior.rs
docs/: ARBITRARY_N_RESEARCH.md  RELEASING.md  release-notes-v0.1.0.md
packaging/flatpak/: io.github.adamnolle.cubesolver.metainfo.xml  io.github.adamnolle.cubesolver.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tools/: build-wasm.py  design-source.txt  frontend-smoke.py  gen-index.py  wasm-runtime-smoke.mjs
web/: README.md  index.html  solver-worker.js
