[workspace]
members = [
    "crates/cube_core",
    "crates/cube_solver",
    "crates/solver_store",
    "crates/solver_lab_app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
directories = "5"
eframe = "0.32"
egui = "0.32"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Release builds: optimized and stripped. Keep panic = "unwind" — several tests
# and the solver's verify_against rely on unwinding/assert behavior.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
