[package]
name = "cube-solver"
version = "0.1.0"
description = "Cube Solver — N×N cube solver studio"
authors = ["Adam Nolle"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
cube_wasm = { path = "../crates/cube_wasm" }

# Own workspace — independent of the parent crates' workspace/profile.
[workspace]
