[package]
name = "cube_wasm"
edition.workspace = true
version.workspace = true
description = "WebAssembly bridge for the Cube Solver model and verified solving engines"
repository = "https://github.com/AdamNolle/Cube-Solver"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cube_core = { path = "../cube_core" }
# Single-threaded build of the solver (no rayon / OS threads) for wasm. `reduction`
# enables the NxN reduction solver (centres→edges→3×3→parity) so 4×4+ solve for real;
# it adds only serde_json (already a dep), no threads.
cube_solver = { path = "../cube_solver", default-features = false, features = ["reduction"] }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json.workspace = true
console_error_panic_hook = "0.1"

# rand pulls in getrandom; enable its js backend so wasm32-unknown-unknown links
# (the solver only uses seeded RNGs, but getrandom must still compile).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# The bundled wasm-opt errors on this toolchain's wasm features; skip it (the
# unoptimised module is still small and correct).
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
