[package]
name = "solver_store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cube_core = { path = "../cube_core" }
cube_solver = { path = "../cube_solver" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

